added error messages for each field

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,5 +2,6 @@
     <body>
         <h1>Hello Karl!</h1>
         <p>welcome to my page</p>
+        <a href="/signup" class="btn">Sign up</a>
     </body>
 </html>
