--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,20 +1,34 @@
 <html>
     <body>
+        <a href="/">Home</a>
         <h2>Sign up:</h2>
 
         <% 
         const errorFor = (field) => errors.find(e => e.path === field);
         const usernameError = errorFor("username");
+        const firstNameError = errorFor("firstname");
+        const lastNameError = errorFor("lastname");
+        const passwordError = errorFor("password")
         %>
 
         <form action="/signup" method="POST" class="form">
             <div class="formRow">
                 <label for="firstname">First name</label>
                 <input type="text" maxlength="255" id="firstName" name="first_name" required>
+                <% if (firstNameError) { %>
+                    <p id ="firstname-error" class="fieldError" role="alert">
+                        <%= firstNameError.msg %>
+                    </p>
+                <%} %>
             </div>
             <div>
                 <label for="lastName">Last name</label>
                 <input type="text" maxlength="255" id="lastName" name="last_name" required>
+                 <% if (lastNameError) { %>
+                    <p id ="lastname-error" class="fieldError" role="alert">
+                        <%= lastNameError.msg %>
+                    </p>
+                <%} %>
             </div>
             <div>
                 <label for="username">Email</label>
@@ -35,6 +49,11 @@
             <div>
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
+                <% if (passwordError) { %>
+                    <p id ="password-error" class="fieldError" role="alert">
+                        <%= passwordError.msg %>
+                    </p>
+                <%} %>
             </div>
             <button type="Submit">Sign up</button>
         </form>
