added password confirmation requirement and validatioin

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,15 +6,23 @@
         <% 
         const errorFor = (field) => errors.find(e => e.path === field);
         const usernameError = errorFor("username");
-        const firstNameError = errorFor("firstname");
-        const lastNameError = errorFor("lastname");
-        const passwordError = errorFor("password")
+        const firstNameError = errorFor("first_name");
+        const lastNameError = errorFor("last_name");
+        const passwordError = errorFor("password");
+        const passwordConfirmationError = errorFor("passwordConfirmation")
         %>
 
         <form action="/signup" method="POST" class="form">
             <div class="formRow">
                 <label for="firstname">First name</label>
-                <input type="text" maxlength="255" id="firstName" name="first_name" required>
+                <input 
+                    type="text" 
+                    maxlength="255" 
+                    id="firstName" 
+                    name="first_name" 
+                    value="<%= values.first_name ?? '' %>"
+                    required
+                >
                 <% if (firstNameError) { %>
                     <p id ="firstname-error" class="fieldError" role="alert">
                         <%= firstNameError.msg %>
@@ -23,7 +31,14 @@
             </div>
             <div>
                 <label for="lastName">Last name</label>
-                <input type="text" maxlength="255" id="lastName" name="last_name" required>
+                <input 
+                    type="text" 
+                    maxlength="255" 
+                    id="lastName" 
+                    name="last_name" 
+                    value="<%= values.last_name ?? '' %>"
+                    required
+                >
                  <% if (lastNameError) { %>
                     <p id ="lastname-error" class="fieldError" role="alert">
                         <%= lastNameError.msg %>
@@ -52,6 +67,13 @@
                 <% if (passwordError) { %>
                     <p id ="password-error" class="fieldError" role="alert">
                         <%= passwordError.msg %>
+                    </p>
+                <%} %>
+                <label for="passwordConfirmation">Confirm password</label>
+                <input type="password" id="passwordConfirmation" name="passwordConfirmation" required>
+                <% if (passwordConfirmationError) { %>
+                    <p id ="passwordConfirmation-error" class="fieldError" role="alert">
+                        <%= passwordConfirmationError.msg %>
                     </p>
                 <%} %>
             </div>
