added currentUser variable

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
     <body>
         <% if (locals.user) {%>
-            <h1>Welcome back <%= user.username %></h1>
+            <h1>Welcome back <%= currentUser.first_name %></h1>
             <a href="/log-out">log out</a>
             <%} else {%>
                 <h1>Welcome!</h1>
