added ability to join the membership club

--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -9,7 +9,7 @@
     <a href="/">Home</a>
     <h1>Join the club!</h1>
     <p>Enter the secret code below to join the club!</p>
-    <form action="/membership" method="POST" class="form">
+    <form action="/signup/membership" method="POST" class="form">
         <div class="formRow">
             <label for="secretCode">Secret code</label>
             <input type="text" id="secretCode" name="secret_code" required>
